tests/test_files/invalid/semantic/unknown_task_in_taskcall.pfdl
# SPDX-FileCopyrightText: The PFDL Contributors
# SPDX-License-Identifier: MIT

Struct Test
    attribute: string
End

Task task_1
    task_3
        In
            "a string"
End

Task task_2
    In
        input: string
    Service
        In
            "test"
End